Remove Java 8 apis